--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     ]
   },
   "require": {
-    "php": ">=7.2"
+    "php": ">=7.2",
+    "symfony/asset": "^5.0@dev"
   },
   "minimum-stability": "dev"
 }
