--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "require": {
     "php": ">=7.2",
-    "symfony/asset": "^5.0@dev"
+    "symfony/asset": "4.3.1"
   },
   "minimum-stability": "dev"
 }
