--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   },
   "require": {
     "php": ">=7.2",
-    "symfony/asset": "4.3.1"
+    "symfony/asset": "v5.2.0"
   },
   "minimum-stability": "dev"
 }
